Fixed the excessive line-height on titles which looked awful on mobile

--- a/css/sbc.bootstrap.css
+++ b/css/sbc.bootstrap.css
@@ -5420,12 +5420,6 @@ h6 small {
   color: #999999;
 }
 
-h1,
-h2,
-h3 {
-  line-height: 3;
-}
-
 h1 {
   font-size: 52.25px;
 }
