--- a/less/custom.less
+++ b/less/custom.less
@@ -132,9 +132,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-h1,
-h2,
-h3 { line-height: @line-height-base * 2; }
+// h1, h2, h3 { line-height: @line-height-base * 2; }
 
 h1 { font-size: @font-size-base * @h1Size; } // ~38px
 h2 { font-size: @font-size-base * @h2Size; } // ~32px
